Fixed countries table data and layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: #fbf8fb;
-  color: #212d38;
+  color: #26223e;
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
